--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
@@ -240,7 +240,7 @@
 \paragraph{UC-15 Visualizzazione totalità degli utenti presenti in tutte le stanze}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video una lista di utenti presenti in tutte le stanze registrate all'interno del sistema;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare il numero di utenti presenti in tutte le stanze registrate all'interno del sistema;
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di visualizzazione delle stanze registrate nell'applicazione web;
     \item \textbf{Postcondizione:} l'amministratore visualizza il numero di utenti presenti all'interno di tutte le stanze registrate nel sistema;
     \item \textbf{Scenario principale:}
