--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -39,7 +39,8 @@ Gli strumenti con cui si cercherà di perseguire la qualità sopra citata sono:
 \begin{itemize}
 	\item \textbf{SC} (Statement Coverage): si calcola mediante la formula $SC = \frac{numero\ di\ righe\ eseguite}{numero\ di\ righe\ totali}$ e indica la \% di codice coperto dai test;
 	\item \textbf{BC} (Branch Coverage): si calcola mediante la formula $BC = \frac{numero\ di\ rami\ percorsi}{numero\ di\ rami\ totali}$ e indica la \% di rami raggiunti dai test;
-	\item \textbf{MCDC} (Modified Condition/Decision Coverage): si calcola mediante la formula \newline $MCDC = \frac{numero\ di\ decisioni\ percorse}{numero\ di\ decisioni\ totali}$ e indica la \% di decisioni booleane coperte dai test. 
+	\item \textbf{MCDC} (Modified Condition/Decision Coverage): si calcola mediante la formula \newline $MCDC = \frac{numero\ di\ decisioni\ percorse}{numero\ di\ decisioni\ totali}$ e indica la \% di decisioni booleane coperte dai test;
+	\item \textbf{DSCC} (Documentation service code Coverage): si calcola mediante la formula \newline $DSCC = \frac{numero\ di\ servizi\ documentati}{numero\ di\ servizi\ totali}$ e indica la \% di servizi documentati;
 \end{itemize}
 \myparagraph{Documentazione}
 \begin{itemize}
