--- a/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/Analisi_codice.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/Analisi_codice.tex
@@ -1,7 +1,7 @@
 La stesura del codice è supportata dai plugin dell'editor Visual Studio Code. I plugin rilevanti in ambito di verifica sono due:
 \begin{itemize}
-    \item \textbf{ESlint v2.1.10:}  linter per il linguaggio Javascript;
-    \item \textbf{SonarLint v1.20.0}  linter per diversi linguaggi di programmazione.
+    \item \textbf{\glo{ESlint} v2.1.10:}  linter per il linguaggio Javascript;
+    \item \textbf{\glo{SonarLint} v1.20.0}  linter per diversi linguaggi di programmazione.
 \end{itemize} 
 
 I linter hanno aiutato notevolmente la stesura di codice sintatticamente corretto e alla standardizzazione del codice scritto, che risulta più uniforme; inoltre hanno facilitato parzialmente il
