--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
@@ -10,40 +10,47 @@ Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progres
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
         \renewcommand{\arraystretch}{1.5}
         \centering
-        \begin{longtable}{|p{0.8cm}|p{1.2cm}|p{2cm}|p{8.8cm}|}
+        \begin{longtable}{|p{0.8cm}|p{1.2cm}|p{0.8cm}|p{2cm}|p{7.6cm}|}
         \caption{Tabella di occorrenza dei rischi}\\
         \rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Cod.}} & 
+        \textcolor{\secondaryColor}{\textbf{fase}} & 
         \textcolor{\secondaryColor}{\textbf{Periodo}} & 
         \textcolor{\secondaryColor}{\textbf{Occorrenza}} & 
         \textcolor{\secondaryColor}{\textbf{Descrizione}}\\
        
         RTa & 
+        analisi &
         1 & 
         media &
         Parte dei membri del gruppo si sono ritrovati per la prima volta ad usare strumenti quali \glo{GitHub} e \glo{LaTex}. Sono stati predisposti dei template ed impostato un repository di base da chi era già pratico di tali strumenti; ognuno ha inoltre provveduto a documentarsi ed esercitarsi autonomamente sull'utilizzo; i membri già avezzi si sono resi da subito disponibili per suggerimenti e chiarimenti.\\
         \hline
         RTb & 
+        analisi &
         2 & 
         bassa &
         Non tutti i membri hanno fin da subito utilizzato strumenti di supporto consigliati nelle \NdP{}, ad esempio \glo{GitKraken}, utile per una veloce sincronizzazione con \glo{GitHub} da \glo{repository} locale. Chi già conosceva questi strumenti ne ha incitato e spiegato l'utilizzo, permettendo così una velocizzazione del processo di lavoro.\\
         \hline
         RTd & 
+        analisi &
         1 & 
         media &
         Inizialmente c'è stata una certa confusione riguardo il formato ed i contenuti della documentazione da consegnare. Ad ogni riunione svolta si è cercato tra tutti i membri di sollevare e risolvere insieme ogni eventuale dubbio, in alcuni casi con l'aiuto di risorse online, standard \glo{ISO} e le indicazioni fornite dal committente.\\
         \hline
         RPa & 
+        analisi &
         1, 2 & 
         bassa &
         In alcuni rari casi non è stato comunque possibile fissare una data per gli incontri senza andare in contrasto con gli impegni regolari di almeno un membro del gruppo. La riunione è stata svolta ugualmente, previo unanime consenso, con la promessa di un aggiornamento da parte dell'assente.\\
         \hline
         ROb & 
+        analisi &
         1 & 
         alta &
         Strumenti di monitoraggio importanti pre-concordati, quali ad esempio \glo{Jira}, non sono stati fin da subito usati regolarmente da tutti i membri del gruppo. È stato fatto presente incitando all'osservanza delle regole e tutti i membri si sono impegnati a seguirle con maggiore accortezza.\\
         \hline
         ROd & 
+        analisi &
         1 & 
         media &
         In qualche caso la redazone di alcuni documenti si è protratta oltre il tempo prestabilito per ultimare gli stessi, ritardando così i tempi per la loro validazione. Fortunatamente i ritardi non sono stati eccessivi e si è riusciti ugualmente a completare i lavori entro i tempi stabiliti, senza particolari complicazioni. È stato in ogni caso fatto presente tra i membri del gruppo.\\
