--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
@@ -62,6 +62,24 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
         Comunicare tempestivamente al gruppo di essere impossibilitati. &
         A seconda dell'importanza del compito assegnato si valuterà se concedere più tempo oppure suddividerlo tra i restanti membri. \\
         \hline
+        RPc &
+        Alcuni componenti del
+        gruppo potrebbero essere
+        in disaccordo su alcune
+        decisioni prese creando
+        una situazione di
+        malessere. &
+        media &
+        media &
+        Il componente del gruppo comunicherà la sua
+controversia riguardo una
+decisione. &
+Si cercherà di ascoltare
+ciascun componente del gruppo
+cercando di scegliere la
+soluzione più adatta per il bene
+del progetto. \\
+        \hline
         ROa &
         Incomprensioni o difficili rapporti tra membri del gruppo. &
         media &
@@ -90,6 +108,67 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
         All'avvicinarsi dello scadere dei tempi stabiliti, il responsabile si informerà sullo stato dei lavori. &
         Nei casi più urgenti i restanti membri del gruppo valuteranno se suddividersi il lavoro da svolgere. \\
         \hline
-    
+        RRa &
+        Incomprensione dei requisiti richiesti,
+        può accadere all’inizio
+        del progetto
+        con poche conseguenze,
+        ma se accade
+        a progetto inoltrato
+        il problema
+        può rivelarsi molto
+        serio &
+        media &
+        alta &
+        Deve essere rilevato prima di procedere alla fase di progettazione in modo da avere chiaro i requisiti facendo un analisi critica di tale fase. &
+        Da prevenire possibilmente facendo un analisi critica della fase di analisi ed apportare eventuali modifiche.  \\
+       \hline
+        RRb &
+        Cliente poco presente
+        Rischio che prevede
+        contatti poco frequenti
+        e/o di scarso
+        aiuto con l’azienda
+        proponente che mostra
+        poco interesse &
+        bassa &
+        alta &
+        Capire fin da subito
+        le disponibilità
+        dell’azienda &
+        Cercare di insistere mandando e-mail per quanto possibile
+e qualora questo non portasse a risultati capire al meglio i requisiti per conto proprio\\
+        \hline
+        RRc &
+        Modifica dei requisiti
+Si verifica quando
+nel corso del
+progetto l’azienda
+proponente modifica
+qualche richiesta
+iniziale oppure se
+il gruppo sceglie
+di sviluppare il
+progetto in maniera
+diversa da quella
+già pensata &
+        bassa &
+        alta &
+        Sarà l’azienda a comunicare
+al gruppo
+il cambiamento dei
+requisiti &
+Effettuare nuovamente
+l’analisi dei
+requisiti \\
+\hline
+RSa &
+Per ogni incremento verrà stimato il costo di tempo, denaro e risorse utilizzate. A causa dell’inesperienza questa stima potrebbe essere errata &
+alta &
+media &
+Se un membro del gruppo si accorge/pensa di non attenersi alla pianificazione e quindi termina prima o dopo del tempo prestabilito o utilizza risorse e denaro non come previsto,dovrà farlo presente al responsabile di progetto(legato a ROc) &
+Organizzare un’attenta pianificazione in modo da ridurre questo rischio e qualora si presentasse un eccesso troppo alto il responsabile dovrà
+ridistribure:le risorse,il carico di lavoro per ammortizzare i tempi e/o costi e svolgere quanto prefissato e come nel periodo di tempo specifico  \\
+
         \end{longtable}
     }
