--- a/DocumentiEsterni/PianoDiProgetto/src/Appendice/src/incrementi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Appendice/src/incrementi.tex
@@ -1,15 +1,10 @@
 \hypertarget{TabellaIncrementi}{}
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
-\begin{longtable}{ C{0.15\textwidth} C{0.15\textwidth} C{0.1\textwidth} C{0.1\textwidth} C{0.1\textwidth} C{0.1\textwidth} C{0.1\textwidth} }
+\begin{longtable}{ C{0.15\textwidth} C{0.15\textwidth} C{0.15\textwidth} C{0.15\textwidth} C{0.15\textwidth} }
     \caption{Tabella Incrementi}                                                                                 \\
     \rowcolor{\primaryColor}
-    \textcolor{\secondaryColor}{\textbf{Incremento}} & \textcolor{\secondaryColor}{\textbf{requisito}}& \textcolor{\secondaryColor}{\textbf{h/PT}} & \textcolor{\secondaryColor}{\textbf{h/PR}}& \textcolor{\secondaryColor}{\textbf{h/VE}}& \textcolor{\secondaryColor}{\textbf{stima in euro}}&\textcolor{\secondaryColor}{\textbf{costo effettivo in euro}}\\ \endhead
-    {Incremento 1 integrazione blockchain} & {R-numero-D-I } & {10 } & {10}& {10}& {}& {520}\\
-    {Incremento 2 gestionepostazioni (\glo{backend})} & {R-numero-P-O} & { }& {}& {}& {}& {} \\
-    {Incremento 3 app Android lettura \glo{NFC}} & {} & {}& {}& {}& {}& {}\\
-    {Incremento 4 creazione interfaccia admin} & {} & {}& {}& {}& {}& {}\\
-    {Incremento 5 setup \glo{Kubernetes}  } & {} & {}& {}& {}& {}& {}\\
-    {Incremento 6 autenticazione \glo{API} esposte} & {} & {}& {}& {}& {}& {}\\
+    \textcolor{\secondaryColor}{\textbf{Incremento}} & \textcolor{\secondaryColor}{\textbf{requisito backend}}  &\textcolor{\secondaryColor}{\textbf{requisiti webapp admin}}&\textcolor{\secondaryColor}{\textbf{requisito app utenti}}&\textcolor{\secondaryColor}{\textbf{costo tot. in euro}}\\ \endhead
+    {Incremento 1 integrazione blockchain} & {R-numero-D-I } & {10 } & {10}&  {520}\\
+    {Incremento 2 app Android lettura \glo{NFC}} & {} & {}& {}& {}\\
+    {Incremento 3 creazione interfaccia admin} & {} & {}& {}& {}\\
 \end{longtable}
-
-
