aggiunto 2 metriche alla qualità

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -29,6 +29,8 @@ Gli strumenti con cui si cercherà di perseguire la qualità sopra citata sono:
 \myparagraph{Pianificazione}
 \begin{itemize}
 	\item \textbf{BAC} (Budget at completion): valore previsto per la realizzazione del progetto;
+	\item \textbf{EAC} ( Estimate At Completion): rappresenta il nuovo preventivo sul totale alla fine di un periodo;
+	\item \textbf{VAC} ( Variance At Completion): indica la variazione tra BAC ed EAC e la spesa effettivamente sostenuta;
 	\item \textbf{AC} (Actual cost): costo effettivamente sostenuto alla data corrente;
 	\item \textbf{EV} (Earned value): valore delle attività realizzate alla data corrente;
 	\item \textbf{PV} (Planned value): costo pianificato per realizzare le attività di progetto alla data corrente;
