aggiunto 2 metriche alla qualità

--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -27,7 +27,7 @@
 \usepackage{caption} % numerazione figure e loro descrizione testuale
 \usepackage{subcaption} % sottofigure numerabili
 
-\usepackage{amsmath} % formule matematiche
+\usepackage{amsmath,eurosym} % formule matematiche
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{amsthm}
