--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/Classificazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/Classificazione.tex
@@ -2,7 +2,7 @@ In seguito all'individuazione dei casi d'uso, all'analisi dei documenti di prese
 
 \begin{itemize}
     \item \textbf{Requisiti funzionali:} insieme di requisiti che definiscono le azioni fondamentali che devono avvenire in grado di processare un input e di generare un output;
-    \item  \textbf{Requisiti dichiarativi:} insieme di requisiti che rappresentano un vincolo di natura realizzativa, normativa o contrattuale;
+    \item  \textbf{Requisiti di vincolo:} insieme di requisiti che rappresentano un vincolo di natura realizzativa, normativa o contrattuale;
     \item \textbf{Requisiti qualitativi:} insieme di requisiti che garantiscono una certa qualit\`{a} al prodotto e che indicano le best practice usate per la realizzazione.
 \end{itemize}
 
