--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiFunzionali.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiFunzionali.tex
@@ -1,15 +1,12 @@
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{1.5}
-\begin{longtable}{ c C{9cm} c }
+\begin{longtable}{ c C{9.5cm} c }
     \caption{Tabella classificazione requisiti funzionali}\\
     \rowcolor{\primaryColor}
     \textcolor{\secondaryColor}{
     \textbf{Identificativo}} & \textcolor{\secondaryColor}{\textbf{Descrizione}}                                                            & \textcolor{\secondaryColor}
     {\textbf{Fonte}}                                                                                                                                                      \\
 
-    % R-1-F-0                  & Il sistema deve permettere ad un amministratore di accedere al portale web                                   & ...                         \\
-    % R-1.1-F-0                & Il sistema deve permettere ad un amministratore di inserire la propria mail con la quale si \`{e} registrato & ...                         \\
-    % X.X.X                    & XXXX-XX-XX                                                                                                   & ...                         \\
 
     R-1-F-O & Il sistema deve permettere ad un account con permessi di amministratore di autenticarsi come tale nell'applicazione web& UC-1 \\
     R-1.1-F-O & Il sistema deve permettere l'inserimento delle credenziali da parte dell'amministratore per effettuare il login presso l'applicazione web& UC-1.1 \\
@@ -85,62 +82,33 @@
     R-25.2-F-O & Il sistema deve permettere l'inserimento di una nuova password personale presso l'applicazione mobile& UC-37.2\\
     R-25.3-F-O & Il sistema deve permettere ad un utente di re-inserire la nuova password di conferma presso l'applicazione mobile& UC-37.3\\
     R-26-F-O & Il sistema deve permettere ad un utente di modificare la propria password personale presso l'applicazione mobile& UC-41\\
-    R-26.1-F-O & Il sistema deve permettere ad un utente di re-inserire la password corrente presso l'applicazione mobile& UC-41.1\\
-    R-26.2-F-O & Il sistema deve permettere l'inserimento di una nuova password personale presso l'applicazione mobile& UC-41.2\\
-    R-26.3-F-O & Il sistema deve permettere ad un utente di re-inserire la nuova password di conferma presso l'applicazione mobile& UC-41.3\\
+    R-26.1-F-O & Il sistema deve permettere ad un utente di inserire la password corrente, che intende modificre, presso l'applicazione mobile& UC-41.1\\
+    R-26.2-F-O & Il sistema deve permettere all'utente l'inserimento della nuova password personale presso l'applicazione mobile& UC-41.2\\
+    R-26.3-F-O & Il sistema deve permettere all'utente di confermare, re-inserendo la nuova password presso l'applicazione mobile& UC-41.3\\
+    R-27-F-O & Il sistema deve permettere all'utente di effettuare il logout dall'applicazione mobile& UC-45\\
+    R-28-F-O & Il sistema deve permettere all'utente di prenotare una postazione attraverso l'applicazione mobile& UC-46\\
+    R-28.1-F-O & Il sistema deve permettere all'utente di selezionare la stanza in cui intende effettuare la prenotazione di una postazione attraverso l'applicazione mobile& UC-46.1\\
+    R-28.2-F-O & Il sistema deve permettere all'utente di selezionare la postazione presso cui intende effettuare la prenotazione, attraverso l'applicazione mobile& UC-46.2\\
+    R-28.3-F-O & Il sistema deve permettere all'utente di selezionare la data per cui intende effettuare la prenotazione, attraverso l'applicazione mobile& UC-46.3\\
+    R-28.4-F-O & Il sistema deve permettere all'utente di selezionare l'orario d'inizio per cui intende effettuare la prenotazione, attraverso l'applicazione mobile& UC-46.4\\
+    R-28.5-F-O & Il sistema deve permettere all'utente di selezionare la durata della prenotazione, attraverso l'applicazione mobile& UC-46.5\\
+    R-29-F-O & Il sistema deve permettere all'utente di visualizzare le prenotazioni effettuate, attraverso l'applicazione mobile& UC-47\\
+    R-29.1-F-O & Il sistema deve permettere all'utente di visualizzare il codice identificativo delle prenotazioni effettuate, attraverso l'applicazione mobile& UC-47.1\\
+    R-29.2-F-O & Il sistema deve permettere all'utente di visualizzare la data delle prenotazioni effettuate, attraverso l'applicazione mobile& UC-47.2\\
+    R-29.3-F-O & Il sistema deve permettere all'utente di visualizzare l'orario di inizio delle prenotazioni effettuate, attraverso l'applicazione mobile& UC-47.3\\
+    R-29.4-F-O & Il sistema deve permettere all'utente di visualizzare le stanze contenenti le postazioni relative alle prenotazioni effettuate, attraverso l'applicazione mobile& UC-47.4\\
+    R-29.5-F-O & Il sistema deve permettere all'utente di visualizzare il codice identificativo delle postazioni relative alle prenotazioni effettuate, attraverso l'applicazione mobile& UC-47.5\\
+    R-29.6-F-O & Il sistema deve permettere all'utente di visualizzare la durata delle prenotazioni effettuate, attraverso l'applicazione mobile& UC-47.6\\
+    R-30-F-O & Il sistema deve permettere all'utente cancellare una prenotazione effettuata, attraverso l'applicazione mobile& UC-48\\
+    R-31-F-O & Il sistema deve permettere all'utente di marcare una postazione come igienizzata, attraverso l'applicazione mobile& UC-49\\
+    R-31.1-F-O & Il sistema deve permettere il riconoscimento fisico dell'avvenuta igienizzazione attraverso la scansione del tag RFID, tramite applicazione mobile& UC-49.1\\
+    R-32-F-O & Il sistema deve permettere il riconoscimento fisico della propria presenza presso la postazione& UC-50\\
+    R-32.1-F-O & Il sistema deve permettere la scansione del tag RFID per segnalare la propria presenza presso la postazione& UC-50.1\\
+    R-32.2-F-O & Il sistema deve permettere la visualizzazione dello stato attuale della postazione in seguito alla scansione del tag RFID associato& UC-50.2\\
+    R-32.3-F-O & Il sistema deve permettere la conferma ed avvio di utilizzo della postazione in seguito alla visualizzazione dello stato attuale della stessa& UC-50.3\\
+    R-33-F-O & Il sistema deve permettere di segnalare la terminazione di utilizzo di una postazione& UC-51\\
+    R-34-F-O & Il sistema deve permettere all'igienizzatore di visualizzare le stanze da pulire& UC-52\\
+    R-35-F-O & Il sistema deve permettere all'igienizzatore di marcare una stanza come pulita& UC-53\\
+    R-35.1-F-O & Il sistema deve permettere all'igienizzatore di segnalare fisicamente l'avvenuta igienizzazione attraverso la scansione del tag RFID associato alla stanza& UC-53.1\\
 
-
-
-
-
-
-
-
-
-
-    
-    
-    R-1-F-O & Il sistema deve permettere l'inserimento di un nuovo utente & UC-1 \\
-    R-1.1-F-O & Il sistema deve permettere l'inserimento del nome del nuovo utente & UC-1.1 \\
-    R-1.2-F-O & Il sistema deve permettere l'inserimento del cognome del nuovo utente & UC-1.2 \\
-    R-1.3-F-O & Il sistema deve permettere l'inserimento dell'email del nuovo utente & UC-1.3 \\
-    R-2-F-O & Il sistema deve permettere la creazione di una password personale & UC-4 \\
-    R-3-F-O & Il sistema deve permettere ad un utente registrato il login tramite applicazione mobile & UC-7 \\
-    R-4-F-O & Il sistema deve permettere ad un amministratore non autenticato il login tramite applicazione web & UC-8 \\
-    R-5-F-O & Il sistema deve permettere ad un utente autenticato di fare il logout & UC-10 \\
-    R-6-F-D & Il sistema deve permettere di visualizzare il profilo personale dell'utente attualmente autenticato da applicazione mobile & UC-11 \\
-    R-6.1-F-D & Il sistema deve permettere di visualizzare il nome dell'utente attualmente autenticato da applicazione mobile & UC-11.1 \\
-    R-6.2-F-D & Il sistema deve permettere di visualizzare il cognome dell'utente attualmente autenticato da applicazione mobile & UC-11.2 \\
-    R-7-F-O & Il sistema deve permettere ad un amministratore autenticato di visualizzare il profilo degli utenti registrati attraverso l'applicazione web & UC-12 \\
-    R-7.1-F-D & Il sistema deve permettere ad un amministratore autenticato di visualizzare il nome degli utenti registrati attraverso applicazione web & UC-12.1 \\
-    R-7.2-F-D & Il sistema deve permettere ad un amministratore autenticato di visualizzare il cognome degli utenti registrati attraverso applicazione web & UC-12.2 \\
-    R-7.3-F-D & Il sistema deve permettere ad un amministratore autenticato di visualizzare l'email degli utenti registrati attraverso applicazione web & UC-12.3 \\
-    R-8-F-F & Il sistema deve permettere la modifica del profilo personale dell'utente attualmente autenticato attraverso l'applicazione mobile & UC-13 \\
-    R-8.1-F-F & Il sistema deve permettere la modifica del nome dell'utente attualmente autenticato attraverso l'applicazione mobile & UC-13.1 \\
-    R-8.2-F-F & Il sistema deve permettere la modifica del cognome dell'utente attualmente autenticato attraverso l'applicazione mobile & UC-13.2 \\
-    R-9-F-O & Il sistema deve permettere la cancellazione del profilo dell'utente attualmente autenticato attraverso l'applicazione mobile & UC-15 \\
-    R-10-F-O & Il sistema deve permettere la creazione di una prenotazione da parte del personale interno autenticato attraverso l'applicazione mobile & UC-16 \\
-    R-10.1-F-O & Il sistema deve permettere la selezione della data per cui effettuare la prenotazione & UC-16.1 \\
-    R-10.2-F-O & Il sistema deve permettere la selezione della stanza per cui effettuare la prenotazione & UC-16.2 \\
-    R-10.3-F-O & Il sistema deve permettere la selezione della postazione per cui effettuare la prenotazione & UC-16.3 \\
-    R-10.4-F-O & Il sistema deve permettere la selezione dell'ora per cui effettuare la prenotazione & UC-16.4 \\
-    R-11-F-O & Il sistema deve permettere la modifica di una prenotazione precedentemente effettuata & UC-17 \\
-    R-12-F-O & Il sistema deve permettere la cancellazione di una prenotazione precedentemente effettuata & UC-18 \\
-    R-13-F-D & Il sistema deve permettere la visualizzazione delle prenotazioni effettuate & UC-20 \\
-    R-14-F-O & Il sistema deve permettere la marcatura di una postazione come "igienizzata" & UC-21 \\
-    R-15-F-O & Il sistema deve marcare una postazione come "sporca" nel momento in cui viene occupata & UC-22 \\
-    R-16-F-O & Il sistema deve permettere di marcare una postazione come "occupata" & UC-23 \\
-    R-17-F-O & Il sistema deve permettere ad un amministratore autenticato di contrassegnare una postazione come abilitata & UC-24 \\
-    R-18-F-O & Il sistema deve permettere ad un amministratore autenticato di aggiungere una postazione & UC-25 \\
-    R-19-F-O & Il sistema deve permettere ad un amministratore autenticato la disabilitazione di una postazione & UC-26 \\
-    R-20-F-O & Il sistema deve permettere ad un amministratore autenticato la rimozione di una postazione & UC-27 \\
-    R-21-F-D & Il sistema deve permettere ad un amministratore autenticato la visualizzazione dello storico di una postazione & UC-28 \\
-    R-22-F-O & Il sistema deve permettere ad un amministratore autenticato lo scaricamento di report dello storico di una postazione & UC-29 \\
-    R-23-F-O & Il sistema deve permettere ad un amministratore autenticato di aggiungere una stanza & UC-30 \\
-    R-24-F-O & Il sistema deve permettere ad un amministratore autenticato la disabilitazione di una stanza & UC-31 \\
-    R-25-F-O & Il sistema deve permettere ad un amministratore autenticato la rimozione di una stanza & UC-32 \\
-    R-26-F-D & Il sistema deve permettere ad un amministratore autenticato la visualizzazione dello storico di una stanza & UC-33 \\
-    R-27-F-O & Il sistema deve permettere ad un amministratore autenticato lo scaricamento di report dello storico di una stanza & UC-34 \\
-    R-28-F-O & Il sistema deve permettere ad un igienizzatore di marcare una postazione come "igienizzata" & UC-35 \\
-    R-29-F-O & Il sistema deve permettere ad un igienizzatore di marcare una stanza come "igienizzata" & UC-36 \\
 \end{longtable}
