--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiDiVincolo.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiDiVincolo.tex
@@ -22,7 +22,7 @@
     R-6-V-O     & L'applicazione mobile deve essere sviluppata tramite framework \glo{Flutter} e linguaggio di programmazione \glo{Dart} & VERBALE INTERNO 2021-02-10 \\
     R-7-V-O     & L'applicazione mobile deve utilizzare la tecnologia NFC & Capitolato \\
     R-8-V-D     & E' desiderabile utilizzare il GPS nell'applicazione mobile per il tracciamento delle persone & VERBALE ESTERNO CON PATERA \\
-    R-9-V-O     & Il sistema utilizzerà \glo{Kubernets} per la gestione del container & VERBALE INTERNO 2021-01-29 \\
+    R-9-V-O     & Il sistema utilizzerà \glo{Kubernetes} per la gestione del container & VERBALE INTERNO 2021-01-29 \\
     R-10-V-O    & Il sistema utilizzerà \glo{MongoDB} come database & VERBALE INTERNO 2021-01-29 \\
 
 
