Auto stash before merge of "analisiDeiRequisiti/UcRestyle" and "origin/analisiDeiRequisiti/UcRestyle"

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiDiVincolo.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiDiVincolo.tex
@@ -15,7 +15,7 @@
     R-2-V-O     & Deve essere sviluppata un applicazione web utilizzabile dall'amministratore & Capitolato\\
     R-2.1-V-D   & E' desiderabile l'utilizzo del linguaggio \glo{Typescript} per lo sviluppo dell'applicazione web & VERBALE INTERNO 2021-01-29 \\
     R-2.2-V-O   & L'applicazione web deve essere sviluppata con il framework di front-end \glo{Angular} & VERBALE INTERNO 2021-01-29 \\
-    R-2.3-V-D   & E' desiderabile l'utilizzo di \glo{NodeJS} per la parte beck-end e front-end &  VERBALE INTERNO 2021-01-29 \\
+    R-2.3-V-D   & E' desiderabile l'utilizzo di \glo{NodeJS} per la parte back-end e front-end &  Capitolato \\
     R-3-V-F     & Il sistema è composto da microservizi & Capitolato\\
     R-4-V-O     & Il sistema utilizza \glo{Infura} per connettersi alla rete Ethereum & Capitolato\\
     R-5-V-O     & Devono essere previsti testi di unità e di integrazione & Capitolato\\
