--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiFunzionali.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiFunzionali.tex
@@ -110,5 +110,31 @@
     R-34-F-O & Il sistema deve permettere all'igienizzatore di visualizzare le stanze da pulire& UC-52\\
     R-35-F-O & Il sistema deve permettere all'igienizzatore di marcare una stanza come pulita& UC-53\\
     R-35.1-F-O & Il sistema deve permettere all'igienizzatore di segnalare fisicamente l'avvenuta igienizzazione attraverso la scansione del tag RFID associato alla stanza& UC-53.1\\
+    R-36-F-O & Il sistema resituisce un messaggio di errore se la coppia di credenzial inserita in fase di  login non viene riconosciuta& UC-2\\
+    R-37-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo email del nuovo utente da aggiungere non è valido& UC-8\\
+    R-37.1-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo email inserito è già presente& UC-8.1\\
+    R-37.2-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo email presenta caratteri non validi& UC-8.2\\
+    R-38-F-O & Il sistema resituisce un messaggio di errore se il codice inserito durante l'aggiunta di una nuova stanza non è valido& UC-12\\
+    R-38.1-F-O & Il sistema resituisce un messaggio di errore se il codice inserito durante l'aggiunta di una nuova stanza non univoco& UC-12.1\\
+    R-38.2-F-O & Il sistema resituisce un messaggio di errore se il codice inserito durante l'aggiunta di una nuova presenta caratteri non validi& UC-12.2\\
+    R-39-F-O & Il sistema resituisce un messaggio di errore se il codice relativo il tag RFID da associare alla stanza non è valido& UC-13\\
+    R-40-F-O & Il sistema resituisce un messaggio di errore se il nuovo codice identificativo modificato di una stanza non è valido& UC-17\\
+    R-40.1-F-O & Il sistema resituisce un messaggio di errore se il nuovo codice identificativo modificato di una stanza non è univoco& UC-17.1\\
+    R-40.2-F-O & Il sistema resituisce un messaggio di errore se il nuovo codice identificativo modificato di una stanza presenta caratteri non validi& UC-17.2\\
+    R-41-F-O & Il sistema resituisce un messaggio di errore se il codice RFID da associare ad una postazione è già stato usato per un'altra& UC-24\\
+    R-42-F-O & Il sistema resituisce un messaggio di errore se il codice identificativo inserito durante l'aggiunta o modifica di una nuova postazione non è valido& UC-25\\
+    R-42.1-F-O & Il sistema resituisce un messaggio di errore se il codice identificativo inserito durante l'aggiunta o modifica di una nuova postazione non è univoco& UC-25.1\\
+    R-42.2-F-O & Il sistema resituisce un messaggio di errore se il codice identificativo inserito durante l'aggiunta o modifica di una nuova postazione presenta caratteri non validi& UC-25.2\\
+    R-43-F-O & Il sistema resituisce un messaggio di errore se il nome inserito dal nuovo utente è mancante o presenta caratteri non validi& UC-31\\
+    R-44-F-O & Il sistema resituisce un messaggio di errore se il cognome inserito dal nuovo utente è mancante o presenta caratteri non validi& UC-32\\
+    R-45-F-O & Il sistema resituisce un messaggio di errore se la password inserita dal nuovo utente è mancante o presenta caratteri non validi& UC-33\\
+    R-46-F-O & Il sistema resituisce un messaggio di errore se la password re-inserita dal nuovo utente è mancante o non corrispondente a quella precedentemente inserita& UC-34\\
+    R-47-F-O & Il sistema resituisce un messaggio di errore se la coppia di credenziali inserita durante il login presso l'applicazione mobile non viene riconosciuta& UC-36\\
+    R-48-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo email inserito per effettuare il recupero della password è mancante o non riconosciuto& UC-38\\
+    R-49-F-O & Il sistema resituisce un messaggio di errore se la nuova passwrod inserita è mancante o non valida& UC-39\\
+    R-50-F-O & Il sistema resituisce un messaggio di errore se la nuova passwrod re-inserita è mancante o non non corrispondente a quella precedentemente inserita& UC-40\\
+    R-51-F-O & Il sistema resituisce un messaggio di errore se la password inserita, da modificare, è mancante o errata& UC-42\\
+    R-52-F-O & Il sistema resituisce un messaggio di errore se la nuova password inserita, da modificare, è mancante o non valida& UC-43\\
+    R-53-F-O & Il sistema resituisce un messaggio di errore se la nuova password re-inserita, da modificare, è mancante o non corrispondente a quella precedentemente inserita& UC-44\\
 
 \end{longtable}
