--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
@@ -149,7 +149,7 @@
 	      \end{enumerate}
 \end{itemize}
 
-\subsubsection{UC-12.2 Errore: inserimento di un codice di una stanza contenente caratteri non validi}
+\paragraph{UC-12.2 Errore: inserimento di un codice di una stanza contenente caratteri non validi}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 	\item \textbf{Descrizione:} l'amministratore ha provato ad inserire il codice identificativo di nuova stanza ma l'assegnazione non è andata a buon fine poiché il codice inserito contiene dei caratteri speciali che non rispettano i criteri di inserimento;
@@ -164,7 +164,7 @@
 
 
 
-\subsubsection{UC-13 Errore: inserimento di un codice tag RFID di una stanza non valido}
+\paragraph{UC-13 Errore: inserimento di un codice tag RFID di una stanza non valido}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 	\item \textbf{Descrizione:} l'amministratore ha provato ad inserire il codice tag RFID di nuova stanza ma l'assegnazione non è andata a buon fine poiché il codice inserito è già censito nel sistema, quindi già associato ad una stanza esistente;
