--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiDiVincolo.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiDiVincolo.tex
@@ -11,17 +11,17 @@
     % R-1.1-F-0                & Il sistema deve permettere ad un amministratore di inserire la propria mail con la quale si \`{e} registrato & ...                         \\
     % X.X.X                    & XXXX-XX-XX                                                                                                   & ...                         \\
 
-    R-1-V-O     & L'applicazione mobile sviluppata deve essere disponibile per il sistema Android & Capitolato\\
-    R-2-V-O     & Deve essere sviluppata un applicazione web utilizzabile dall'amministratore & Capitolato\\
-    R-2.1-V-D   & E' desiderabile l'utilizzo del linguaggio \glo{Typescript} per lo sviluppo dell'applicazione web & VERBALE INTERNO 2021-01-29 \\
+    R-1-V-O     & L'applicazione mobile sviluppata deve essere disponibile per il sistema \glo{Android} & Capitolato\\
+    R-2-V-O     & Deve essere sviluppata un' applicazione web utilizzabile dall'amministratore & Capitolato\\
+    R-2.1-V-D   & \`{E} desiderabile l'utilizzo del linguaggio \glo{Typescript} per lo sviluppo dell'applicazione web & VERBALE INTERNO 2021-01-29 \\
     R-2.2-V-O   & L'applicazione web deve essere sviluppata con il framework di front-end \glo{Angular} & VERBALE INTERNO 2021-01-29 \\
-    R-2.3-V-D   & E' desiderabile l'utilizzo di \glo{NodeJS} per la parte back-end e front-end &  Capitolato \\
+    R-2.3-V-D   & \`{E} desiderabile l'utilizzo di \glo{NodeJS} per la parte back-end e front-end &  Capitolato \\
     R-3-V-F     & Il sistema è composto da microservizi & Capitolato\\
     R-4-V-O     & Il sistema utilizza \glo{Infura} per connettersi alla rete Ethereum & Capitolato\\
-    R-5-V-O     & Devono essere previsti testi di unità e di integrazione & Capitolato\\
+    R-5-V-O     & Devono essere previsti test di unità e di integrazione & Capitolato\\
     R-6-V-O     & L'applicazione mobile deve essere sviluppata tramite framework \glo{Flutter} e linguaggio di programmazione \glo{Dart} & VERBALE INTERNO 2021-02-10 \\
     R-7-V-O     & L'applicazione mobile deve utilizzare la tecnologia NFC & Capitolato \\
-    R-8-V-D     & E' desiderabile utilizzare il GPS nell'applicazione mobile per il tracciamento delle persone & VERBALE ESTERNO CON PATERA \\
+    R-8-V-D     & \`{E} desiderabile l'utilizzo del GPS nell'applicazione mobile per il tracciamento delle persone & VERBALE ESTERNO CON PATERA \\
     R-9-V-O     & Il sistema utilizzerà \glo{Kubernetes} per la gestione del container & VERBALE INTERNO 2021-01-29 \\
     R-10-V-O    & Il sistema utilizzerà \glo{MongoDB} come database & VERBALE INTERNO 2021-01-29 \\
 
