--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiQualitativi.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiQualitativi.tex
@@ -12,14 +12,14 @@
     % X.X.X                    & XXXX-XX-XX                                                                                                   & ...                         \\
 
     R-1-Q-O     & La progettazione e la codifica devono rispettare le norme e le metriche definite nei documenti \NdPv{} e \PdQv{} & Interno\\
-    R-2-Q-O     & Il codice sorgente, i test e la documentazione deve essere disponibile su un sistema di versionamento, come Gitlab & Capitolato\\
+    R-2-Q-O     & Il codice sorgente, i test e la documentazione devono essere disponibili nel sistema di versionamento utilizzato (GitLab) & Capitolato\\
     R-3-Q-O     & Il sistema deve essere pubblicato con licenza open source & Capitolato\\
     R-4-Q-O     & Deve essere prodotto un manuale sviluppatore & Interno \\
     R-5-Q-O     & Deve essere redatta la documentazione sulle scelte progettuali effettuate & Capitolato \\
     R-6-Q-O     & \`{E} fondamentale testare ogni prodotto software in ogni suo sistema di riferimento e interazione tra le sue parti con test di unità e di integrazione e di sistema & Capitolato\\
     R-6.1-Q-O   & \`{E} fondamentale fornire test di unità per ogni componente applicativo & Capitolato \\
     R-6.2-Q-O   & \`{E} fondamentale fornire test di integrazione per ogni componente applicativo & Capitolato \\
-    R-6.3-Q-O   & \`{E} fondamentale testare il sistema con test di sistema & Capitolato \\
+    R-6.3-Q-O   & \`{E} fondamentale testare il prodotto con test di sistema & Capitolato \\
 
 
 
